@@ -56,9 +56,27 @@ compose.desktop {
 
     application {
         mainClass = "MainKt"
+
+        jvmArgs("--add-opens", "java.desktop/sun.awt=ALL-UNNAMED")
+        jvmArgs("--add-opens", "java.desktop/java.awt.peer=ALL-UNNAMED") // recommended but not necessary
+
+        if (System.getProperty("os.name").contains("Mac")) {
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt=ALL-UNNAMED")
+            jvmArgs("--add-opens", "java.desktop/sun.lwawt.macosx=ALL-UNNAMED")
+        }
+
+        buildTypes {
+            release {
+                proguard {
+                    configurationFiles.from(file("compose-desktop.pro"))
+                }
+            }
+        }
+
         nativeDistributions {
             // Modules suggested by suggestRuntimeModules (avoids the ClassNotFoundException)
             modules("java.instrument", "java.management", "java.prefs", "java.sql", "jdk.unsupported")
+            includeAllModules = true
 
             targetFormats(TargetFormat.Dmg, TargetFormat.Msi, TargetFormat.Deb)
             packageName = "Sphinx"
